--- a/src/Metamoris/views/layout_forms.html.twig
+++ b/src/Metamoris/views/layout_forms.html.twig
@@ -42,8 +42,14 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 
-<!--[if lt IE 9]>
+
 {% block javascripts %}{% endblock %}
-<![endif]-->
+<script>
+    $().ready(function () {
+
+
+    });
+
+</script>
 </body>
 </html>
